// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk stack creation for map service creates Map policy for Authorized and Guest users access type 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomMap",
          "MapName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
    "Style": Object {
      "Value": Object {
        "Ref": "mapStyle",
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "mapName": Object {
      "Type": "String",
    },
    "mapStyle": Object {
      "Type": "String",
    },
    "pricingPlan": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomMap": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambda",
            "Arn",
          ],
        },
        "env": Object {
          "Ref": "env",
        },
        "mapName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "mapName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "mapStyle": Object {
          "Ref": "mapStyle",
        },
        "pricingPlan": Object {
          "Ref": "pricingPlan",
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMapLambda": Object {
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = (event, context) => {
 try {
  console.log('REQUEST RECEIVED:' + JSON.stringify(event));
  if (event.RequestType == 'Create') {
    let params = {
      MapName: event.ResourceProperties.mapName,
      Configuration: {
        Style: event.ResourceProperties.mapStyle
      },
      PricingPlan: event.ResourceProperties.pricingPlan
    };
    const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
    locationClient.createMap(params).promise()
    .then((res) => {
       console.log(\\"create\\" + res);
       console.log(\\"response data\\" + JSON.stringify(res));
       if (res.MapName && res.MapArn) {
         event.PhysicalResourceId = event.ResourceProperties.mapName;
         response.send(event, context, response.SUCCESS, res);
       }
       else {
         response.send(event, context, response.FAILED, res);
       }
     });
  }
  if (event.RequestType == 'Update') {
    let params = {
      MapName: event.ResourceProperties.mapName,
      PricingPlan: event.ResourceProperties.pricingPlan
    };
    const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
    locationClient.updateMap(params).promise()
    .then((res) => {
       console.log(\\"update\\" + res);
       console.log(\\"response data\\" + JSON.stringify(res));
       if (res.MapName && res.MapArn) {
         event.PhysicalResourceId = event.ResourceProperties.mapName;
         response.send(event, context, response.SUCCESS, res);
       }
       else {
         response.send(event, context, response.FAILED, res);
       }
     });
  }
  if (event.RequestType == 'Delete') {
    let params = {
      MapName: event.ResourceProperties.mapName
    };
    const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
    locationClient.deleteMap(params).promise()
    .then((res) => {
       event.PhysicalResourceId = event.ResourceProperties.mapName;
       console.log(\\"delete\\" + res);
       console.log(\\"response data\\" + JSON.stringify(res));
       response.send(event, context, response.SUCCESS, res);
     });
  }
 } catch(err) {
  console.log(err.stack);
  const res = {Error: err};
  response.send(event, context, response.FAILED, res);
  throw err;
 }
};",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambdaExecutionRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMapLambdaExecutionRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:logs:*:*:*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  Object {
                    "Fn::Join": Array [
                      "-",
                      Array [
                        Object {
                          "Ref": "mapName",
                        },
                        Object {
                          "Ref": "env",
                        },
                      ],
                    ],
                  },
                  "CustomLambdaLogPolicy",
                ],
              ],
            },
          },
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "geo:CreateMap",
                    "geo:UpdateMap",
                    "geo:DeleteMap",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  Object {
                    "Fn::Join": Array [
                      "-",
                      Array [
                        Object {
                          "Ref": "mapName",
                        },
                        Object {
                          "Ref": "env",
                        },
                      ],
                    ],
                  },
                  "CustomLambdaGeoPolicy",
                ],
              ],
            },
          },
        ],
        "RoleName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "mapName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "LambdaRole",
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MapPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:GetMapStyleDescriptor",
                "geo:GetMapGlyphs",
                "geo:GetMapSprites",
                "geo:GetMapTile",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CustomMap",
                  "MapArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "mapName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
          Object {
            "Ref": "unauthRoleName",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cdk stack creation for map service creates Map policy for Authorized users only access type 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomMap",
          "MapName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
    "Style": Object {
      "Value": Object {
        "Ref": "mapStyle",
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "mapName": Object {
      "Type": "String",
    },
    "mapStyle": Object {
      "Type": "String",
    },
    "pricingPlan": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomMap": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambda",
            "Arn",
          ],
        },
        "env": Object {
          "Ref": "env",
        },
        "mapName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "mapName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "mapStyle": Object {
          "Ref": "mapStyle",
        },
        "pricingPlan": Object {
          "Ref": "pricingPlan",
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMapLambda": Object {
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = (event, context) => {
 try {
  console.log('REQUEST RECEIVED:' + JSON.stringify(event));
  if (event.RequestType == 'Create') {
    let params = {
      MapName: event.ResourceProperties.mapName,
      Configuration: {
        Style: event.ResourceProperties.mapStyle
      },
      PricingPlan: event.ResourceProperties.pricingPlan
    };
    const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
    locationClient.createMap(params).promise()
    .then((res) => {
       console.log(\\"create\\" + res);
       console.log(\\"response data\\" + JSON.stringify(res));
       if (res.MapName && res.MapArn) {
         event.PhysicalResourceId = event.ResourceProperties.mapName;
         response.send(event, context, response.SUCCESS, res);
       }
       else {
         response.send(event, context, response.FAILED, res);
       }
     });
  }
  if (event.RequestType == 'Update') {
    let params = {
      MapName: event.ResourceProperties.mapName,
      PricingPlan: event.ResourceProperties.pricingPlan
    };
    const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
    locationClient.updateMap(params).promise()
    .then((res) => {
       console.log(\\"update\\" + res);
       console.log(\\"response data\\" + JSON.stringify(res));
       if (res.MapName && res.MapArn) {
         event.PhysicalResourceId = event.ResourceProperties.mapName;
         response.send(event, context, response.SUCCESS, res);
       }
       else {
         response.send(event, context, response.FAILED, res);
       }
     });
  }
  if (event.RequestType == 'Delete') {
    let params = {
      MapName: event.ResourceProperties.mapName
    };
    const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
    locationClient.deleteMap(params).promise()
    .then((res) => {
       event.PhysicalResourceId = event.ResourceProperties.mapName;
       console.log(\\"delete\\" + res);
       console.log(\\"response data\\" + JSON.stringify(res));
       response.send(event, context, response.SUCCESS, res);
     });
  }
 } catch(err) {
  console.log(err.stack);
  const res = {Error: err};
  response.send(event, context, response.FAILED, res);
  throw err;
 }
};",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambdaExecutionRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMapLambdaExecutionRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "Service": Array [
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": "arn:aws:logs:*:*:*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  Object {
                    "Fn::Join": Array [
                      "-",
                      Array [
                        Object {
                          "Ref": "mapName",
                        },
                        Object {
                          "Ref": "env",
                        },
                      ],
                    ],
                  },
                  "CustomLambdaLogPolicy",
                ],
              ],
            },
          },
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "geo:CreateMap",
                    "geo:UpdateMap",
                    "geo:DeleteMap",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": Object {
              "Fn::Join": Array [
                "",
                Array [
                  Object {
                    "Fn::Join": Array [
                      "-",
                      Array [
                        Object {
                          "Ref": "mapName",
                        },
                        Object {
                          "Ref": "env",
                        },
                      ],
                    ],
                  },
                  "CustomLambdaGeoPolicy",
                ],
              ],
            },
          },
        ],
        "RoleName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "mapName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "LambdaRole",
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "MapPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:GetMapStyleDescriptor",
                "geo:GetMapGlyphs",
                "geo:GetMapSprites",
                "geo:GetMapTile",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CustomMap",
                  "MapArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "mapName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
